# TelegramGroupActivityManager

./: .env.example  .gitignore  .pylintrc  README.md  project_config.py  pyproject.toml  telegram_activity_manager.py
core/: bot.py  chat_bot.py  project_types.py  schemas.py  types.py  typing_simulator.py
core/managers/: bot_manager.py  chat_manager.py  message_manager.py  subscription_manager.py
