[project]
name = "telegram-group-activity-manager"
version = "0.0.1"
description = ""
authors = [
    { name = "Oleh Ohiichuk", email = "chaotichoice@gmail.com" }
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pyrogram (>=2.0.106,<3.0.0)",
    "openai (>=1.63.0,<2.0.0)",
    "tgconvertor (>=0.0.8,<0.0.9)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "opentele (>=1.15.1,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pylint = "^3.3.4"
black = "^25.1.0"

[tool.mypy]
strict = true